fix inputbox being behind -voffset chars

--- a/webAO/styles/client.css
+++ b/webAO/styles/client.css
@@ -343,6 +343,7 @@
 }
 
 #client_inputbox {
+	position: relative;
 	font-size: 21px;
 	padding: 2px 10px;
 }
